# AIActions

./: .gitignore  pyproject.toml
test_actions/: README.md  pyproject.toml
test_actions/test_actions/: predict_cairo_action.py
