[tool.poetry]
name = "aiactions"
version = "0.1.0"
description = ""
authors = ["Mahmoud Mohajer <mahmohajer3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
giza-actions = "^0.1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
